RESOLVED FIXED113570
[BlackBerry] Context menu doesn't showup anymore after rebase
https://bugs.webkit.org/show_bug.cgi?id=113570
Summary [BlackBerry] Context menu doesn't showup anymore after rebase
Charles Wei
Reported 2013-03-29 05:22:39 PDT
This is caused by our call to Node::dispatchMouseEvent(), which was refactored with upstreaming patch for bug : https://bugs.webkit.org/show_bug.cgi?id=103058, and that patch just returns the opposite value as before to make it consistent with what Node::dispatchEvent() does. So the BlackBerry porting that calls Node::dispatchMouseEvent() should reverse the logic.
Attachments
Patch (2.05 KB, patch)
2013-03-29 05:33 PDT, Charles Wei
no flags
Charles Wei
Comment 1 2013-03-29 05:33:09 PDT
WebKit Review Bot
Comment 2 2013-03-29 06:06:50 PDT
Comment on attachment 195728 [details] Patch Clearing flags on attachment: 195728 Committed r147211: <http://trac.webkit.org/changeset/147211>
WebKit Review Bot
Comment 3 2013-03-29 06:06:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.