[BlackBerry] Context menu doesn't showup anymore after rebase. https://bugs.webkit.org/show_bug.cgi?id=113570

Reviewed by George Staikos.

The upstreaming patch for bug: 103058, reverses the return value of
Node::dispatchMouseEvent() to be consistent with Node::dispatchEvent(),
so we should reverse our logic in webkit part that calls it also.

This only applys to master_41 which is a new rebase, don't apply it to master_40.
* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::webContext):


Canonical link: https://commits.webkit.org/131926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147211 268f45cc-cd09-0410-ab3c-d52691b4dbfc